add_executable(clgen_features clgen_features.cpp)
add_executable(clgen_rewriter clgen_rewriter.cpp)

add_dependencies(clgen_features llvm)
add_dependencies(clgen_rewriter llvm)

set_target_properties(clgen_features PROPERTIES
    path ${CMAKE_CURRENT_BINARY_DIR}/clgen_features
)
set_target_properties(clgen_rewriter PROPERTIES
    path ${CMAKE_CURRENT_BINARY_DIR}/clgen_rewriter
)

target_include_directories(clgen_features PUBLIC ${LLVM}/include/)
target_include_directories(clgen_rewriter PUBLIC ${LLVM}/include/)

target_link_directories(clgen_features PUBLIC ${LLVM}/lib/)
target_link_directories(clgen_features PUBLIC ${LLVM}/lib/clang/6.0.0/lib/linux/)
target_link_directories(clgen_rewriter PUBLIC ${LLVM}/lib/)
target_link_directories(clgen_rewriter PUBLIC ${LLVM}/lib/clang/6.0.0/lib/linux/)

target_compile_options (clgen_features PRIVATE
    -I/usr/lib/llvm-9/include
    -std=c++11
    -fno-exceptions
    -D_GNU_SOURCE
    -D__STDC_CONSTANT_MACROS
    -D__STDC_FORMAT_MACROS
    -D__STDC_LIMIT_MACROS
    -std=c++11 -O3 -fno-rtti
)
target_compile_options (clgen_rewriter PRIVATE
    -I/usr/lib/llvm-9/include
    -std=c++11
    -fno-exceptions
    -D_GNU_SOURCE
    -D__STDC_CONSTANT_MACROS
    -D__STDC_FORMAT_MACROS
    -D__STDC_LIMIT_MACROS
    -std=c++11 -O3 -fno-rtti
)

target_link_libraries(clgen_features
  "-Wl,-rpath,"
  "-lrt"
  "-ldl"
  "-lpthread"
  "-lm"
  "-lclangTooling"
  "-lclangToolingCore"
  "-lclangFrontend"
  "-lclangDriver"
  "-lclangSerialization"
  "-lclangCodeGen"
  "-lclangParse"
  "-lclangSema"
  "-lclangAnalysis"
  "-lclangRewriteFrontend"
  "-lclangRewrite"
  "-lclangEdit"
  "-lclangAST"
  "-lclangLex"
  "-lclangBasic"
  "-lclang"
  "-lLLVMLTO"
  "-lLLVMPasses"
  "-lLLVMObjCARCOpts"
  "-lLLVMMIRParser"
  "-lLLVMSymbolize"
  "-lLLVMDebugInfoPDB"
  "-lLLVMDebugInfoDWARF"
  "-lLLVMCoverage"
  "-lLLVMTableGen"
  "-lLLVMDlltoolDriver"
  "-lLLVMOrcJIT"
  "-lLLVMXCoreDisassembler"
  "-lLLVMXCoreCodeGen"
  "-lLLVMXCoreDesc"
  "-lLLVMXCoreInfo"
  "-lLLVMXCoreAsmPrinter"
  "-lLLVMSystemZDisassembler"
  "-lLLVMSystemZCodeGen"
  "-lLLVMSystemZAsmParser"
  "-lLLVMSystemZDesc"
  "-lLLVMSystemZInfo"
  "-lLLVMSystemZAsmPrinter"
  "-lLLVMSparcDisassembler"
  "-lLLVMSparcCodeGen"
  "-lLLVMSparcAsmParser"
  "-lLLVMSparcDesc"
  "-lLLVMSparcInfo"
  "-lLLVMSparcAsmPrinter"
  "-lLLVMPowerPCDisassembler"
  "-lLLVMPowerPCCodeGen"
  "-lLLVMPowerPCAsmParser"
  "-lLLVMPowerPCDesc"
  "-lLLVMPowerPCInfo"
  "-lLLVMPowerPCAsmPrinter"
  "-lLLVMNVPTXCodeGen"
  "-lLLVMNVPTXDesc"
  "-lLLVMNVPTXInfo"
  "-lLLVMNVPTXAsmPrinter"
  "-lLLVMMSP430CodeGen"
  "-lLLVMMSP430Desc"
  "-lLLVMMSP430Info"
  "-lLLVMMSP430AsmPrinter"
  "-lLLVMMipsDisassembler"
  "-lLLVMMipsCodeGen"
  "-lLLVMMipsAsmParser"
  "-lLLVMMipsDesc"
  "-lLLVMMipsInfo"
  "-lLLVMMipsAsmPrinter"
  "-lLLVMLanaiDisassembler"
  "-lLLVMLanaiCodeGen"
  "-lLLVMLanaiAsmParser"
  "-lLLVMLanaiDesc"
  "-lLLVMLanaiAsmPrinter"
  "-lLLVMLanaiInfo"
  "-lLLVMHexagonDisassembler"
  "-lLLVMHexagonCodeGen"
  "-lLLVMHexagonAsmParser"
  "-lLLVMHexagonDesc"
  "-lLLVMHexagonInfo"
  "-lLLVMBPFDisassembler"
  "-lLLVMBPFCodeGen"
  "-lLLVMBPFAsmParser"
  "-lLLVMBPFDesc"
  "-lLLVMBPFInfo"
  "-lLLVMBPFAsmPrinter"
  "-lLLVMARMDisassembler"
  "-lLLVMARMCodeGen"
  "-lLLVMARMAsmParser"
  "-lLLVMARMDesc"
  "-lLLVMARMInfo"
  "-lLLVMARMAsmPrinter"
  "-lLLVMARMUtils"
  "-lLLVMAMDGPUDisassembler"
  "-lLLVMAMDGPUCodeGen"
  "-lLLVMAMDGPUAsmParser"
  "-lLLVMAMDGPUDesc"
  "-lLLVMAMDGPUInfo"
  "-lLLVMAMDGPUAsmPrinter"
  "-lLLVMAMDGPUUtils"
  "-lLLVMAArch64Disassembler"
  "-lLLVMAArch64CodeGen"
  "-lLLVMAArch64AsmParser"
  "-lLLVMAArch64Desc"
  "-lLLVMAArch64Info"
  "-lLLVMAArch64AsmPrinter"
  "-lLLVMAArch64Utils"
  "-lLLVMObjectYAML"
  "-lLLVMLibDriver"
  "-lLLVMOption"
  "-lLLVMWindowsManifest"
  "-lLLVMFuzzMutate"
  "-lLLVMX86Disassembler"
  "-lLLVMX86AsmParser"
  "-lLLVMX86CodeGen"
  "-lLLVMGlobalISel"
  "-lLLVMSelectionDAG"
  "-lLLVMAsmPrinter"
  "-lLLVMDebugInfoCodeView"
  "-lLLVMDebugInfoMSF"
  "-lLLVMX86Desc"
  "-lLLVMMCDisassembler"
  "-lLLVMX86Info"
  "-lLLVMX86AsmPrinter"
  "-lLLVMX86Utils"
  "-lLLVMMCJIT"
  "-lLLVMLineEditor"
  "-lLLVMInterpreter"
  "-lLLVMExecutionEngine"
  "-lLLVMRuntimeDyld"
  "-lLLVMCodeGen"
  "-lLLVMTarget"
  "-lLLVMCoroutines"
  "-lLLVMipo"
  "-lLLVMInstrumentation"
  "-lLLVMVectorize"
  "-lLLVMScalarOpts"
  "-lLLVMLinker"
  "-lLLVMIRReader"
  "-lLLVMAsmParser"
  "-lLLVMInstCombine"
  "-lLLVMTransformUtils"
  "-lLLVMBitWriter"
  "-lLLVMAnalysis"
  "-lLLVMProfileData"
  "-lLLVMObject"
  "-lLLVMMCParser"
  "-lLLVMMC"
  "-lLLVMBitReader"
  "-lLLVMCore"
  "-lLLVMBinaryFormat"
  "-lLLVMSupport"
  "-lLLVMDemangle"
  "-pthread"
  "-lLLVMTarget"
  "-lLLVMMC"
  "-lLLVMObject"
  "-lLLVMCore"
  "-lncurses"
  "-lLLVMSupport"
  "-lz"
)

target_link_libraries(clgen_rewriter
  "-Wl,-rpath,"
  "-lrt"
  "-ldl"
  "-lpthread"
  "-lm"
  "-lclangTooling"
  "-lclangToolingCore"
  "-lclangFrontend"
  "-lclangDriver"
  "-lclangSerialization"
  "-lclangCodeGen"
  "-lclangParse"
  "-lclangSema"
  "-lclangAnalysis"
  "-lclangRewriteFrontend"
  "-lclangRewrite"
  "-lclangEdit"
  "-lclangAST"
  "-lclangLex"
  "-lclangBasic"
  "-lclang"
  "-lLLVMLTO"
  "-lLLVMPasses"
  "-lLLVMObjCARCOpts"
  "-lLLVMMIRParser"
  "-lLLVMSymbolize"
  "-lLLVMDebugInfoPDB"
  "-lLLVMDebugInfoDWARF"
  "-lLLVMCoverage"
  "-lLLVMTableGen"
  "-lLLVMDlltoolDriver"
  "-lLLVMOrcJIT"
  "-lLLVMXCoreDisassembler"
  "-lLLVMXCoreCodeGen"
  "-lLLVMXCoreDesc"
  "-lLLVMXCoreInfo"
  "-lLLVMXCoreAsmPrinter"
  "-lLLVMSystemZDisassembler"
  "-lLLVMSystemZCodeGen"
  "-lLLVMSystemZAsmParser"
  "-lLLVMSystemZDesc"
  "-lLLVMSystemZInfo"
  "-lLLVMSystemZAsmPrinter"
  "-lLLVMSparcDisassembler"
  "-lLLVMSparcCodeGen"
  "-lLLVMSparcAsmParser"
  "-lLLVMSparcDesc"
  "-lLLVMSparcInfo"
  "-lLLVMSparcAsmPrinter"
  "-lLLVMPowerPCDisassembler"
  "-lLLVMPowerPCCodeGen"
  "-lLLVMPowerPCAsmParser"
  "-lLLVMPowerPCDesc"
  "-lLLVMPowerPCInfo"
  "-lLLVMPowerPCAsmPrinter"
  "-lLLVMNVPTXCodeGen"
  "-lLLVMNVPTXDesc"
  "-lLLVMNVPTXInfo"
  "-lLLVMNVPTXAsmPrinter"
  "-lLLVMMSP430CodeGen"
  "-lLLVMMSP430Desc"
  "-lLLVMMSP430Info"
  "-lLLVMMSP430AsmPrinter"
  "-lLLVMMipsDisassembler"
  "-lLLVMMipsCodeGen"
  "-lLLVMMipsAsmParser"
  "-lLLVMMipsDesc"
  "-lLLVMMipsInfo"
  "-lLLVMMipsAsmPrinter"
  "-lLLVMLanaiDisassembler"
  "-lLLVMLanaiCodeGen"
  "-lLLVMLanaiAsmParser"
  "-lLLVMLanaiDesc"
  "-lLLVMLanaiAsmPrinter"
  "-lLLVMLanaiInfo"
  "-lLLVMHexagonDisassembler"
  "-lLLVMHexagonCodeGen"
  "-lLLVMHexagonAsmParser"
  "-lLLVMHexagonDesc"
  "-lLLVMHexagonInfo"
  "-lLLVMBPFDisassembler"
  "-lLLVMBPFCodeGen"
  "-lLLVMBPFAsmParser"
  "-lLLVMBPFDesc"
  "-lLLVMBPFInfo"
  "-lLLVMBPFAsmPrinter"
  "-lLLVMARMDisassembler"
  "-lLLVMARMCodeGen"
  "-lLLVMARMAsmParser"
  "-lLLVMARMDesc"
  "-lLLVMARMInfo"
  "-lLLVMARMAsmPrinter"
  "-lLLVMARMUtils"
  "-lLLVMAMDGPUDisassembler"
  "-lLLVMAMDGPUCodeGen"
  "-lLLVMAMDGPUAsmParser"
  "-lLLVMAMDGPUDesc"
  "-lLLVMAMDGPUInfo"
  "-lLLVMAMDGPUAsmPrinter"
  "-lLLVMAMDGPUUtils"
  "-lLLVMAArch64Disassembler"
  "-lLLVMAArch64CodeGen"
  "-lLLVMAArch64AsmParser"
  "-lLLVMAArch64Desc"
  "-lLLVMAArch64Info"
  "-lLLVMAArch64AsmPrinter"
  "-lLLVMAArch64Utils"
  "-lLLVMObjectYAML"
  "-lLLVMLibDriver"
  "-lLLVMOption"
  "-lLLVMWindowsManifest"
  "-lLLVMFuzzMutate"
  "-lLLVMX86Disassembler"
  "-lLLVMX86AsmParser"
  "-lLLVMX86CodeGen"
  "-lLLVMGlobalISel"
  "-lLLVMSelectionDAG"
  "-lLLVMAsmPrinter"
  "-lLLVMDebugInfoCodeView"
  "-lLLVMDebugInfoMSF"
  "-lLLVMX86Desc"
  "-lLLVMMCDisassembler"
  "-lLLVMX86Info"
  "-lLLVMX86AsmPrinter"
  "-lLLVMX86Utils"
  "-lLLVMMCJIT"
  "-lLLVMLineEditor"
  "-lLLVMInterpreter"
  "-lLLVMExecutionEngine"
  "-lLLVMRuntimeDyld"
  "-lLLVMCodeGen"
  "-lLLVMTarget"
  "-lLLVMCoroutines"
  "-lLLVMipo"
  "-lLLVMInstrumentation"
  "-lLLVMVectorize"
  "-lLLVMScalarOpts"
  "-lLLVMLinker"
  "-lLLVMIRReader"
  "-lLLVMAsmParser"
  "-lLLVMInstCombine"
  "-lLLVMTransformUtils"
  "-lLLVMBitWriter"
  "-lLLVMAnalysis"
  "-lLLVMProfileData"
  "-lLLVMObject"
  "-lLLVMMCParser"
  "-lLLVMMC"
  "-lLLVMBitReader"
  "-lLLVMCore"
  "-lLLVMBinaryFormat"
  "-lLLVMSupport"
  "-lLLVMDemangle"
  "-pthread"
  "-lLLVMTarget"
  "-lLLVMMC"
  "-lLLVMObject"
  "-lLLVMCore"
  "-lncurses"
  "-lLLVMSupport"
  "-lz"
)
