add_executable(clgen_features clgen_features.cpp)

add_dependencies(clgen_features llvm)

set_target_properties(clgen_features PROPERTIES
    path ${CMAKE_CURRENT_BINARY_DIR}/clgen_features
)

target_include_directories(clgen_features PUBLIC ${LLVM}/include/)

target_link_directories(clgen_features PUBLIC ${LLVM}/lib/)
target_link_directories(clgen_features PUBLIC ${LLVM}/lib/clang/${LLVM_VERSION}.0.0/lib/linux/)

add_custom_target(cl_header_file ALL
  COMMAND cp ${CMAKE_CURRENT_LIST_DIR}/cl.h ${CMAKE_CURRENT_BINARY_DIR}/cl.h
  COMMENT "Copy cl.h header file"
)

target_compile_options (clgen_features PRIVATE
    -I/usr/lib/llvm-9/include
    -std=c++11
    -fno-exceptions
    -D_GNU_SOURCE
    -D__STDC_CONSTANT_MACROS
    -D__STDC_FORMAT_MACROS
    -D__STDC_LIMIT_MACROS
    -std=c++11 -O3 -fno-rtti
)

if ("${LLVM_VERSION}" STREQUAL "9")
  target_link_libraries(clgen_features
    "-Wl,-rpath,"
    "-lrt"
    "-ldl"
    "-lpthread"
    "-lm"
    "-lclangTooling"
    "-lclangToolingCore"
    "-lclangFrontend"
    "-lclangDriver"
    "-lclangSerialization"
    "-lclangCodeGen"
    "-lclangParse"
    "-lclangSema"
    "-lclangAnalysis"
    "-lclangRewriteFrontend"
    "-lclangRewrite"
    "-lclangEdit"
    "-lclangAST"
    "-lclangLex"
    "-lclangBasic"
    "-lclang"
    "-lLLVMLTO"
    "-lLLVMCore"
    "-lLLVMBitstreamReader"
    "-lLLVMRemarks"
    "-lRemarks"
    "-lLLVMPasses"
    "-lLLVMObjCARCOpts"
    "-lLLVMMIRParser"
    "-lLLVMSymbolize"
    "-lLLVMDebugInfoPDB"
    "-lLLVMDebugInfoDWARF"
    "-lLLVMCoverage"
    "-lLLVMTableGen"
    "-lLLVMDlltoolDriver"
    "-lLLVMOrcJIT"
    "-lLLVMXCoreDisassembler"
    "-lLLVMXCoreCodeGen"
    "-lLLVMXCoreDesc"
    "-lLLVMXCoreInfo"
    "-lLLVMSystemZDisassembler"
    "-lLLVMSystemZCodeGen"
    "-lLLVMSystemZAsmParser"
    "-lLLVMSystemZDesc"
    "-lLLVMSystemZInfo"
    "-lLLVMSparcDisassembler"
    "-lLLVMSparcCodeGen"
    "-lLLVMSparcAsmParser"
    "-lLLVMSparcDesc"
    "-lLLVMSparcInfo"
    "-lLLVMPowerPCDisassembler"
    "-lLLVMPowerPCCodeGen"
    "-lLLVMPowerPCAsmParser"
    "-lLLVMPowerPCDesc"
    "-lLLVMPowerPCInfo"
    "-lLLVMNVPTXCodeGen"
    "-lLLVMNVPTXDesc"
    "-lLLVMNVPTXInfo"
    "-lLLVMMSP430CodeGen"
    "-lLLVMMSP430Desc"
    "-lLLVMMSP430Info"
    "-lLLVMMipsDisassembler"
    "-lLLVMMipsCodeGen"
    "-lLLVMMipsAsmParser"
    "-lLLVMMipsDesc"
    "-lLLVMMipsInfo"
    "-lLLVMLanaiDisassembler"
    "-lLLVMLanaiCodeGen"
    "-lLLVMLanaiAsmParser"
    "-lLLVMLanaiDesc"
    "-lLLVMLanaiInfo"
    "-lLLVMHexagonDisassembler"
    "-lLLVMHexagonCodeGen"
    "-lLLVMHexagonAsmParser"
    "-lLLVMHexagonDesc"
    "-lLLVMHexagonInfo"
    "-lLLVMBPFDisassembler"
    "-lLLVMBPFCodeGen"
    "-lLLVMBPFAsmParser"
    "-lLLVMBPFDesc"
    "-lLLVMBPFInfo"
    "-lLLVMARMDisassembler"
    "-lLLVMARMCodeGen"
    "-lLLVMARMAsmParser"
    "-lLLVMARMDesc"
    "-lLLVMARMInfo"
    "-lLLVMARMUtils"
    "-lLLVMAMDGPUDisassembler"
    "-lLLVMAMDGPUCodeGen"
    "-lLLVMAMDGPUAsmParser"
    "-lLLVMAMDGPUDesc"
    "-lLLVMAMDGPUInfo"
    "-lLLVMAMDGPUUtils"
    "-lLLVMAArch64Disassembler"
    "-lLLVMAArch64CodeGen"
    "-lLLVMAArch64AsmParser"
    "-lLLVMAArch64Desc"
    "-lLLVMAArch64Info"
    "-lLLVMAArch64Utils"
    "-lLLVMObjectYAML"
    "-lLLVMLibDriver"
    "-lLLVMOption"
    "-lLLVMWindowsManifest"
    "-lLLVMFuzzMutate"
    "-lLLVMX86Disassembler"
    "-lLLVMX86AsmParser"
    "-lLLVMX86CodeGen"
    "-lLLVMGlobalISel"
    "-lLLVMSelectionDAG"
    "-lLLVMAsmPrinter"
    "-lLLVMDebugInfoCodeView"
    "-lLLVMDebugInfoMSF"
    "-lLLVMX86Desc"
    "-lLLVMMCDisassembler"
    "-lLLVMX86Info"
    "-lLLVMX86Utils"
    "-lLLVMMCJIT"
    "-lLLVMLineEditor"
    "-lLLVMInterpreter"
    "-lLLVMExecutionEngine"
    "-lLLVMRuntimeDyld"
    "-lLLVMCodeGen"
    "-lLLVMTarget"
    "-lLLVMCoroutines"
    "-lLLVMipo"
    "-lLLVMInstrumentation"
    "-lLLVMVectorize"
    "-lLLVMScalarOpts"
    "-lLLVMLinker"
    "-lLLVMIRReader"
    "-lLLVMAsmParser"
    "-lLLVMInstCombine"
    "-lLLVMTransformUtils"
    "-lLLVMBitWriter"
    "-lLLVMAnalysis"
    "-lLLVMProfileData"
    "-lLLVMObject"
    "-lLLVMMCParser"
    "-lLLVMMC"
    "-lLLVMBitReader"
    "-lLLVMBinaryFormat"
    "-lLLVMSupport"
    "-lLLVMDemangle"
    "-pthread"
    "-lLLVMTarget"
    "-lLLVMMC"
    "-lLLVMObject"
    "-lncurses"
    "-lLLVMSupport"
    "-lz"
  )
else()
  target_link_libraries(clgen_features
    "-Wl,-rpath,"
    "-lrt"
    "-ldl"
    "-lpthread"
    "-lm"
    "-lclangTooling"
    "-lclangToolingCore"
    "-lclangFrontend"
    "-lclangDriver"
    "-lclangSerialization"
    "-lclangCodeGen"
    "-lclangParse"
    "-lclangSema"
    "-lclangAnalysis"
    "-lclangRewriteFrontend"
    "-lclangRewrite"
    "-lclangEdit"
    "-lclangAST"
    "-lclangLex"
    "-lclangBasic"
    "-lclang"
    "-lLLVMLTO"
    "-lLLVMPasses"
    "-lLLVMObjCARCOpts"
    "-lLLVMMIRParser"
    "-lLLVMSymbolize"
    "-lLLVMDebugInfoPDB"
    "-lLLVMDebugInfoDWARF"
    "-lLLVMCoverage"
    "-lLLVMTableGen"
    "-lLLVMDlltoolDriver"
    "-lLLVMOrcJIT"
    "-lLLVMXCoreDisassembler"
    "-lLLVMXCoreCodeGen"
    "-lLLVMXCoreDesc"
    "-lLLVMXCoreInfo"
    "-lLLVMXCoreAsmPrinter"
    "-lLLVMSystemZDisassembler"
    "-lLLVMSystemZCodeGen"
    "-lLLVMSystemZAsmParser"
    "-lLLVMSystemZDesc"
    "-lLLVMSystemZInfo"
    "-lLLVMSystemZAsmPrinter"
    "-lLLVMSparcDisassembler"
    "-lLLVMSparcCodeGen"
    "-lLLVMSparcAsmParser"
    "-lLLVMSparcDesc"
    "-lLLVMSparcInfo"
    "-lLLVMSparcAsmPrinter"
    "-lLLVMPowerPCDisassembler"
    "-lLLVMPowerPCCodeGen"
    "-lLLVMPowerPCAsmParser"
    "-lLLVMPowerPCDesc"
    "-lLLVMPowerPCInfo"
    "-lLLVMPowerPCAsmPrinter"
    "-lLLVMNVPTXCodeGen"
    "-lLLVMNVPTXDesc"
    "-lLLVMNVPTXInfo"
    "-lLLVMNVPTXAsmPrinter"
    "-lLLVMMSP430CodeGen"
    "-lLLVMMSP430Desc"
    "-lLLVMMSP430Info"
    "-lLLVMMSP430AsmPrinter"
    "-lLLVMMipsDisassembler"
    "-lLLVMMipsCodeGen"
    "-lLLVMMipsAsmParser"
    "-lLLVMMipsDesc"
    "-lLLVMMipsInfo"
    "-lLLVMMipsAsmPrinter"
    "-lLLVMLanaiDisassembler"
    "-lLLVMLanaiCodeGen"
    "-lLLVMLanaiAsmParser"
    "-lLLVMLanaiDesc"
    "-lLLVMLanaiAsmPrinter"
    "-lLLVMLanaiInfo"
    "-lLLVMHexagonDisassembler"
    "-lLLVMHexagonCodeGen"
    "-lLLVMHexagonAsmParser"
    "-lLLVMHexagonDesc"
    "-lLLVMHexagonInfo"
    "-lLLVMBPFDisassembler"
    "-lLLVMBPFCodeGen"
    "-lLLVMBPFAsmParser"
    "-lLLVMBPFDesc"
    "-lLLVMBPFInfo"
    "-lLLVMBPFAsmPrinter"
    "-lLLVMARMDisassembler"
    "-lLLVMARMCodeGen"
    "-lLLVMARMAsmParser"
    "-lLLVMARMDesc"
    "-lLLVMARMInfo"
    "-lLLVMARMAsmPrinter"
    "-lLLVMARMUtils"
    "-lLLVMAMDGPUDisassembler"
    "-lLLVMAMDGPUCodeGen"
    "-lLLVMAMDGPUAsmParser"
    "-lLLVMAMDGPUDesc"
    "-lLLVMAMDGPUInfo"
    "-lLLVMAMDGPUAsmPrinter"
    "-lLLVMAMDGPUUtils"
    "-lLLVMAArch64Disassembler"
    "-lLLVMAArch64CodeGen"
    "-lLLVMAArch64AsmParser"
    "-lLLVMAArch64Desc"
    "-lLLVMAArch64Info"
    "-lLLVMAArch64AsmPrinter"
    "-lLLVMAArch64Utils"
    "-lLLVMObjectYAML"
    "-lLLVMLibDriver"
    "-lLLVMOption"
    "-lLLVMWindowsManifest"
    "-lLLVMFuzzMutate"
    "-lLLVMX86Disassembler"
    "-lLLVMX86AsmParser"
    "-lLLVMX86CodeGen"
    "-lLLVMGlobalISel"
    "-lLLVMSelectionDAG"
    "-lLLVMAsmPrinter"
    "-lLLVMDebugInfoCodeView"
    "-lLLVMDebugInfoMSF"
    "-lLLVMX86Desc"
    "-lLLVMMCDisassembler"
    "-lLLVMX86Info"
    "-lLLVMX86AsmPrinter"
    "-lLLVMX86Utils"
    "-lLLVMMCJIT"
    "-lLLVMLineEditor"
    "-lLLVMInterpreter"
    "-lLLVMExecutionEngine"
    "-lLLVMRuntimeDyld"
    "-lLLVMCodeGen"
    "-lLLVMTarget"
    "-lLLVMCoroutines"
    "-lLLVMipo"
    "-lLLVMInstrumentation"
    "-lLLVMVectorize"
    "-lLLVMScalarOpts"
    "-lLLVMLinker"
    "-lLLVMIRReader"
    "-lLLVMAsmParser"
    "-lLLVMInstCombine"
    "-lLLVMTransformUtils"
    "-lLLVMBitWriter"
    "-lLLVMAnalysis"
    "-lLLVMProfileData"
    "-lLLVMObject"
    "-lLLVMMCParser"
    "-lLLVMMC"
    "-lLLVMBitReader"
    "-lLLVMCore"
    "-lLLVMBinaryFormat"
    "-lLLVMSupport"
    "-lLLVMDemangle"
    "-pthread"
    "-lLLVMTarget"
    "-lLLVMMC"
    "-lLLVMObject"
    "-lLLVMCore"
    "-lncurses"
    "-lLLVMSupport"
    "-lz"
  )
endif()