add_executable  (clang_rewriter clang_rewriter.cpp)
add_dependencies(clang_rewriter llvm)

set(CMAKE_CXX_FLAGS        "-fno-rtti")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath,")

target_include_directories(clang_rewriter PUBLIC ${LLVM}/include/)
target_link_directories   (clang_rewriter PUBLIC ${LLVM}/lib/    )

target_link_libraries(clang_rewriter
  "-pthread"
  "-ldl"
  "-lz"
  "-lclangARCMigrate"
  "-lclangFrontend"
  "-lclangFrontendTool"
  "-lclangDriver"
  "-lclangSerialization"
  "-lclangCodeGen"
  "-lclangParse"
  "-lclangSema"
  "-lclangRewriteFrontend"
  "-lclangRewrite"
  "-lclangStaticAnalyzerFrontend"
  "-lclangStaticAnalyzerCheckers"
  "-lclangStaticAnalyzerCore"
  "-lclangAnalysis"
  "-lclangEdit"
  "-lclangAST"
  "-lclangASTMatchers"
  "-lclangLex"
  "-lclangBasic"
  "-lclangTooling"
  "-lclangToolingCore"
  "-lclang"
  "-lLLVMLTO"
  "-lLLVMPasses"
  "-lLLVMObjCARCOpts"
  "-lLLVMMIRParser"
  "-lLLVMSymbolize"
  "-lLLVMDebugInfoPDB"
  "-lLLVMDebugInfoDWARF"
  "-lLLVMCoverage"
  "-lLLVMTableGen"
  "-lLLVMDlltoolDriver"
  "-lLLVMOrcJIT"
  "-lLLVMXCoreDisassembler"
  "-lLLVMXCoreCodeGen"
  "-lLLVMXCoreDesc"
  "-lLLVMXCoreInfo"
  "-lLLVMXCoreAsmPrinter"
  "-lLLVMSystemZDisassembler"
  "-lLLVMSystemZCodeGen"
  "-lLLVMSystemZAsmParser"
  "-lLLVMSystemZDesc"
  "-lLLVMSystemZInfo"
  "-lLLVMSystemZAsmPrinter"
  "-lLLVMSparcDisassembler"
  "-lLLVMSparcCodeGen"
  "-lLLVMSparcAsmParser"
  "-lLLVMSparcDesc"
  "-lLLVMSparcInfo"
  "-lLLVMSparcAsmPrinter"
  "-lLLVMPowerPCDisassembler"
  "-lLLVMPowerPCCodeGen"
  "-lLLVMPowerPCAsmParser"
  "-lLLVMPowerPCDesc"
  "-lLLVMPowerPCInfo"
  "-lLLVMPowerPCAsmPrinter"
  "-lLLVMNVPTXCodeGen"
  "-lLLVMNVPTXDesc"
  "-lLLVMNVPTXInfo"
  "-lLLVMNVPTXAsmPrinter"
  "-lLLVMMSP430CodeGen"
  "-lLLVMMSP430Desc"
  "-lLLVMMSP430Info"
  "-lLLVMMSP430AsmPrinter"
  "-lLLVMMipsDisassembler"
  "-lLLVMMipsCodeGen"
  "-lLLVMMipsAsmParser"
  "-lLLVMMipsDesc"
  "-lLLVMMipsInfo"
  "-lLLVMMipsAsmPrinter"
  "-lLLVMLanaiDisassembler"
  "-lLLVMLanaiCodeGen"
  "-lLLVMLanaiAsmParser"
  "-lLLVMLanaiDesc"
  "-lLLVMLanaiAsmPrinter"
  "-lLLVMLanaiInfo"
  "-lLLVMHexagonDisassembler"
  "-lLLVMHexagonCodeGen"
  "-lLLVMHexagonAsmParser"
  "-lLLVMHexagonDesc"
  "-lLLVMHexagonInfo"
  "-lLLVMBPFDisassembler"
  "-lLLVMBPFCodeGen"
  "-lLLVMBPFAsmParser"
  "-lLLVMBPFDesc"
  "-lLLVMBPFInfo"
  "-lLLVMBPFAsmPrinter"
  "-lLLVMARMDisassembler"
  "-lLLVMARMCodeGen"
  "-lLLVMARMAsmParser"
  "-lLLVMARMDesc"
  "-lLLVMARMInfo"
  "-lLLVMARMAsmPrinter"
  "-lLLVMARMUtils"
  "-lLLVMAMDGPUDisassembler"
  "-lLLVMAMDGPUCodeGen"
  "-lLLVMAMDGPUAsmParser"
  "-lLLVMAMDGPUDesc"
  "-lLLVMAMDGPUInfo"
  "-lLLVMAMDGPUAsmPrinter"
  "-lLLVMAMDGPUUtils"
  "-lLLVMAArch64Disassembler"
  "-lLLVMAArch64CodeGen"
  "-lLLVMAArch64AsmParser"
  "-lLLVMAArch64Desc"
  "-lLLVMAArch64Info"
  "-lLLVMAArch64AsmPrinter"
  "-lLLVMAArch64Utils"
  "-lLLVMObjectYAML"
  "-lLLVMLibDriver"
  "-lLLVMOption"
  "-lLLVMWindowsManifest"
  "-lLLVMFuzzMutate"
  "-lLLVMX86Disassembler"
  "-lLLVMX86AsmParser"
  "-lLLVMX86CodeGen"
  "-lLLVMGlobalISel"
  "-lLLVMSelectionDAG"
  "-lLLVMAsmPrinter"
  "-lLLVMDebugInfoCodeView"
  "-lLLVMDebugInfoMSF"
  "-lLLVMX86Desc"
  "-lLLVMMCDisassembler"
  "-lLLVMX86Info"
  "-lLLVMX86AsmPrinter"
  "-lLLVMX86Utils"
  "-lLLVMMCJIT"
  "-lLLVMLineEditor"
  "-lLLVMInterpreter"
  "-lLLVMExecutionEngine"
  "-lLLVMRuntimeDyld"
  "-lLLVMCodeGen"
  "-lLLVMTarget"
  "-lLLVMCoroutines"
  "-lLLVMipo"
  "-lLLVMInstrumentation"
  "-lLLVMVectorize"
  "-lLLVMScalarOpts"
  "-lLLVMLinker"
  "-lLLVMIRReader"
  "-lLLVMAsmParser"
  "-lLLVMInstCombine"
  "-lLLVMTransformUtils"
  "-lLLVMBitWriter"
  "-lLLVMAnalysis"
  "-lLLVMProfileData"
  "-lLLVMObject"
  "-lLLVMMCParser"
  "-lLLVMMC"
  "-lLLVMBitReader"
  "-lLLVMCore"
  "-lLLVMBinaryFormat"
  "-lLLVMSupport"
  "-lLLVMDemangle"
)
